--- a/client/package.json
+++ b/client/package.json
@@ -6,12 +6,13 @@
 		"classnames": "^2.2.6",
 		"history": "^4.7.2",
 		"node-sass": "^4.11.0",
-		"prop-types": "^15.6.2",
+		"prop-types": "^15.7.2",
 		"react": "^16.5.2",
 		"react-app-polyfill": "^0.1.3",
 		"react-dev-utils": "^6.0.4",
 		"react-dom": "^16.5.2",
 		"react-helmet": "^5.2.0",
+		"react-keyboard-event-handler": "^1.5.2",
 		"react-redux": "^5.0.7",
 		"react-router-dom": "^4.2.2",
 		"react-router-redux": "^5.0.0-alpha.9",
@@ -28,5 +29,10 @@
 	"eslintConfig": {
 		"extends": "react-app"
 	},
-	"browserslist": [ ">0.2%", "not dead", "not ie <= 11", "not op_mini all" ]
+	"browserslist": [
+		">0.2%",
+		"not dead",
+		"not ie <= 11",
+		"not op_mini all"
+	]
 }
