--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
 	"dependencies": {
 		"body-parser": "^1.18.3",
 		"dotenv": "^6.1.0",
-		"express": "^4.16.4"
+		"express": "^4.16.4",
+		"prop-types": "^15.7.2"
 	},
 	"devDependencies": {
 		"chalk": "^3.0.0",
